# ghost-flow

./: .gitignore  3D_VISION_IMPLEMENTATION.md  ACHIEVEMENTS_TODAY.md  AI_CONTEXT_COMPLETE.md  AUDIT_COMPLETE.md  CHANGELOG.md  CLIP_IMPLEMENTATION.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_PROJECT_CONTEXT.md  COMPLETE_SETUP_GUIDE.md  CONTRIBUTING.md  CUDA_USAGE.md  Cargo.toml  FINAL_STATUS.md  FINAL_VERIFICATION.md  GHOSTFLOW_ML_TESTS_FIXED.md  GITHUB_READY.md  HARDWARE_SUPPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  LICENSE-MIT  MISSION_ACCOMPLISHED.md  MODEL_SERVING_COMPLETE.md  NERF_IMPLEMENTATION.md  NO_PLACEHOLDERS_VERIFICATION.md  PERFORMANCE_OPTIMIZATION_COMPLETE.md  PHASE2_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASES_1_2_3_COMPLETE.md  PUBLISHING_TO_CRATES.md  PUBLISHING_v0.3.0_GUIDE.md  PUBLISHING_v0.5.0_GUIDE.md  PUBLISH_INSTRUCTIONS.md  PUBLISH_TO_PYPI.md  PUSH_STATUS.md  PYPI_PUBLISHED.md  PYPI_READY.md  PYPI_SUCCESS.md  (+30 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  python.yml
DOCS/: ALGORITHM_VERIFICATION_REPORT.md  ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  CUDA_INTEGRATION_STATUS.md  DOCUMENTATION_BUILD_FIXED.md  DOCUMENTATION_RESTORED.md  FINAL_CLEAN_STATUS.md  FINAL_COMPREHENSIVE_REPORT.md  FINAL_CUDA_STATUS.md  PERFORMANCE_SUMMARY.md  README.md  SEQUENCE_MODELS_GUIDE.md  STUB_AUDIT_COMPLETE.md  ZERO_WARNINGS_COMPLETE.md
examples/: advanced_ml_demo.rs  model_serving_demo.rs  new_layers_demo.rs  performance_demo.rs  sequence_models.rs  v0_3_0_complete_demo.rs
ghost-flow-py/: .gitignore  BUILD_INSTRUCTIONS.md  Cargo.toml  PERFORMANCE.md  README.md  publish.ps1  publish_now.ps1  publish_pypi_real.ps1  publish_test.ps1  publish_testpypi_secure.ps1  pyproject.toml
ghost-flow-py/examples/: basic_usage.py
ghost-flow-py/src/: lib.rs
ghostflow/: Cargo.toml
ghostflow-autograd/: Cargo.toml
ghostflow-autograd/src/: backward.rs  dynamic_graph.rs  lib.rs  tape.rs
ghostflow-core/: Cargo.toml
ghostflow-core/src/: device.rs  dtype.rs  error.rs  fusion.rs  hardware.rs  lib.rs  memory.rs  metal.rs  neon.rs  profiler.rs  rocm.rs  serialize.rs  shape.rs  simd_ops.rs  sparse.rs  storage.rs  tensor.rs  tpu.rs
ghostflow-core/src/fusion/: mod.rs
ghostflow-core/src/jit/: mod.rs
ghostflow-core/src/layout/: mod.rs
ghostflow-core/src/ops/: activation.rs  arithmetic.rs  conv.rs  matmul.rs  mod.rs  reduction.rs  simd.rs
ghostflow-core/tests/: test_optimizations.rs
ghostflow-cuda/: Cargo.toml  build.rs
ghostflow-cuda/src/: blas.rs  device.rs  error.rs  ffi.rs  lib.rs  memory.rs  ops.rs  optimized_kernels.cu  stream.rs  tensor.rs
ghostflow-cuda/src/kernels/: mod.rs
ghostflow-data/: Cargo.toml
ghostflow-data/src/: augmentation.rs  dataloader.rs  dataset.rs  datasets.rs  lib.rs  sampler.rs  transforms.rs
ghostflow-ffi/: Cargo.toml  build.rs  ghostflow.h
ghostflow-ffi/examples/: example.c
ghostflow-ffi/src/: lib.rs
ghostflow-ml/: Cargo.toml
ghostflow-ml/src/: automl.rs  bayesian.rs  calibration.rs  clustering.rs  clustering_advanced.rs  clustering_more.rs  crf.rs  decomposition.rs  decomposition_advanced.rs  decomposition_incremental.rs  discriminant_analysis.rs  distributed.rs  ensemble.rs  ensemble_advanced.rs  ensemble_advanced_fixed.rs  feature_engineering.rs  feature_selection.rs  gaussian_process.rs  gmm.rs  gpu.rs  gradient_boosting.rs  hmm.rs  hyperparameter_optimization.rs  imbalanced.rs  kernel.rs  lib.rs  lightgbm.rs  linear.rs  linear_sgd.rs  manifold.rs  metrics.rs  metrics_advanced.rs  mixture.rs  model_selection.rs  model_selection_extended.rs  multiclass.rs  naive_bayes.rs  nas.rs  neighbors.rs  neural_network.rs  (+14 more)
ghostflow-ml/src/deep/: activations.rs  cnn.rs  layers.rs  losses.rs  mod.rs  optimizers.rs  rnn.rs  transformer.rs
ghostflow-ml/src/deep/architectures/: activation_nets.rs  attention.rs  autoencoder.rs  capsule.rs  cnn.rs  diffusion.rs  efficient.rs  feedforward.rs  gan.rs  gnn.rs  mod.rs  multimodal.rs  nas.rs  neural_ode.rs  normalization.rs  object_detection.rs  pooling.rs  rl_meta.rs  rnn.rs  segmentation.rs  self_supervised.rs  specialized.rs  spiking.rs  transformer.rs  vae.rs
ghostflow-nn/: Cargo.toml
ghostflow-nn/src/: activation.rs  adversarial.rs  attention.rs  bert.rs  clip.rs  conv.rs  curriculum_learning.rs  differential_privacy.rs  diffusion.rs  distributed.rs  dropout.rs  embedding.rs  federated.rs  flash_attention.rs  gnn.rs  gpt.rs  gradient_checkpointing.rs  inference.rs  init.rs  knowledge_distillation.rs  lib.rs  linear.rs  llama.rs  lora.rs  loss.rs  mesh.rs  mixed_precision.rs  mixture_of_experts.rs  module.rs  nerf.rs  norm.rs  onnx.rs  point_cloud.rs  pooling.rs  prompt_tuning.rs  quantization.rs  ring_attention.rs  rl.rs  rnn.rs  serialization.rs  (+4 more)
ghostflow-optim/: Cargo.toml
ghostflow-optim/src/: adam.rs  lib.rs  optimizer.rs  scheduler.rs  sgd.rs
ghostflow-serve/: Cargo.toml
ghostflow-serve/examples/: client.py
ghostflow-serve/src/: handlers.rs  main.rs  models.rs
ghostflow-wasm/: Cargo.toml  package.json
ghostflow-wasm/examples/: index.html
ghostflow-wasm/src/: lib.rs
ghostflow/src/: lib.rs
scripts/: build_release_assets.sh  publish_all.sh  publish_crates.sh  publish_github.sh  verify_release.sh
test_env/: pyvenv.cfg
test_env/Scripts/: activate  activate.bat
verify_env/: pyvenv.cfg
verify_env/Scripts/: activate  activate.bat
