[package]
name = "ghostflow-cuda"
version = "0.1.0"
edition = "2021"
description = "CUDA backend for GhostFlow ML framework"
build = "build.rs"

[dependencies]
ghostflow-core = { path = "../ghostflow-core" }
parking_lot = "0.12"

[build-dependencies]
cc = "1.0"

[features]
default = []
cuda = []

# Note: When users enable the 'cuda' feature, they need CUDA toolkit installed
# The library will use the FFI bindings defined in src/ffi.rs
# Documentation builds work without CUDA by using CPU fallbacks
