[package]
name = "ghostflow-cuda"
version = "1.0.0"
edition = "2021"
description = "CUDA backend for GhostFlow ML framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/choksi2212/ghost-flow"
homepage = "https://github.com/choksi2212/ghost-flow"
documentation = "https://docs.rs/ghostflow-cuda"
keywords = ["cuda", "gpu", "machine-learning", "deep-learning"]
categories = ["science", "algorithms"]
readme = "../README.md"
build = "build.rs"

[dependencies]
ghostflow-core = { version = "1.0.0", path = "../ghostflow-core" }
parking_lot = "0.12"

[build-dependencies]
cc = "1.0"

[features]
default = []
cuda = []

# Note: When users enable the 'cuda' feature, they need CUDA toolkit installed
# The library will use the FFI bindings defined in src/ffi.rs
# Documentation builds work without CUDA by using CPU fallbacks
