[package]
name = "ghostflow-serve"
version = "1.0.0"
edition = "2021"
description = "REST API server for serving GhostFlow models"
license = "MIT OR Apache-2.0"
repository = "https://github.com/choksi2212/ghost-flow"

[[bin]]
name = "ghostflow-serve"
path = "src/main.rs"

[dependencies]
ghostflow-core = { version = "1.0.0", path = "../ghostflow-core" }
ghostflow-nn = { version = "1.0.0", path = "../ghostflow-nn" }
ghostflow-ml = { version = "1.0.0", path = "../ghostflow-ml" }

# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
