[package]
name = "ghostflow-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for GhostFlow ML framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/choksi2212/ghost-flow"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ghostflow-core = { version = "0.1.0", path = "../ghostflow-core" }
ghostflow-nn = { version = "0.1.0", path = "../ghostflow-nn" }
ghostflow-ml = { version = "0.1.0", path = "../ghostflow-ml" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
