[package]
name = "ghost-flow"
version = "0.3.0"
edition = "2021"
description = "Complete machine learning framework in Rust - tensors, neural networks, and 70+ ML algorithms"
license = "MIT OR Apache-2.0"
repository = "https://github.com/choksi2212/ghost-flow"
homepage = "https://github.com/choksi2212/ghost-flow"
documentation = "https://docs.rs/ghost-flow"
keywords = ["machine-learning", "deep-learning", "neural-network", "tensor", "ml"]
categories = ["science", "algorithms"]
readme = "../README.md"

[features]
default = ["nn", "ml", "autograd", "optim", "data"]
# Core features
simd = ["ghostflow-core/simd"]
cuda = ["ghostflow-cuda/cuda"]
# Module features
nn = ["dep:ghostflow-nn"]
ml = ["dep:ghostflow-ml"]
autograd = ["dep:ghostflow-autograd"]
optim = ["dep:ghostflow-optim"]
data = ["dep:ghostflow-data"]
# All features
full = ["nn", "ml", "autograd", "optim", "data", "simd"]

[dependencies]
# Core is always included
ghostflow-core = { version = "0.1.0", path = "../ghostflow-core" }

# Optional modules (included by default)
ghostflow-nn = { version = "0.1.0", path = "../ghostflow-nn", optional = true }
ghostflow-ml = { version = "0.1.0", path = "../ghostflow-ml", optional = true }
ghostflow-autograd = { version = "0.1.0", path = "../ghostflow-autograd", optional = true }
ghostflow-optim = { version = "0.1.0", path = "../ghostflow-optim", optional = true }
ghostflow-data = { version = "0.1.0", path = "../ghostflow-data", optional = true }
ghostflow-cuda = { version = "0.1.0", path = "../ghostflow-cuda", optional = true }

[[example]]
name = "new_layers_demo"
path = "../examples/new_layers_demo.rs"

[[example]]
name = "sequence_models"
path = "../examples/sequence_models.rs"

[[example]]
name = "advanced_ml_demo"
path = "../examples/advanced_ml_demo.rs"

[[example]]
name = "v0_3_0_complete_demo"
path = "../examples/v0_3_0_complete_demo.rs"
