[package]
name = "ghost-flow"
version = "1.1.1"
edition = "2021"
description = "Complete machine learning framework in Rust - tensors, neural networks, 85+ ML algorithms, GPU acceleration, WASM, FFI, and model serving - all included by default"
license = "MIT OR Apache-2.0"
repository = "https://github.com/choksi2212/ghost-flow"
homepage = "https://github.com/choksi2212/ghost-flow"
documentation = "https://docs.rs/ghost-flow"
keywords = ["machine-learning", "deep-learning", "neural-network", "tensor", "ml"]
categories = ["science", "algorithms"]
readme = "../README.md"

[features]
default = ["nn", "ml", "autograd", "optim", "data", "simd", "cuda", "ffi", "wasm", "serve"]
# Core features
simd = ["ghostflow-core/simd"]
cuda = ["dep:ghostflow-cuda"]
# Module features
nn = ["dep:ghostflow-nn"]
ml = ["dep:ghostflow-ml"]
autograd = ["dep:ghostflow-autograd"]
optim = ["dep:ghostflow-optim"]
data = ["dep:ghostflow-data"]
ffi = ["dep:ghostflow-ffi"]
wasm = ["dep:ghostflow-wasm"]
serve = ["dep:ghostflow-serve"]
# All features
full = ["nn", "ml", "autograd", "optim", "data", "simd", "cuda", "ffi", "wasm", "serve"]

[dependencies]
# Core is always included
ghostflow-core = "0.1.0"

# Optional modules (included by default)
ghostflow-nn = { version = "0.1.0", optional = true }
ghostflow-ml = { version = "0.1.0", optional = true }
ghostflow-autograd = { version = "0.1.0", optional = true }
ghostflow-optim = { version = "0.1.0", optional = true }
ghostflow-data = { version = "0.1.0", optional = true }
ghostflow-cuda = { version = "0.1.0", optional = true }
ghostflow-ffi = { version = "1.0.0", optional = true }
ghostflow-wasm = { version = "1.0.0", optional = true }
ghostflow-serve = { version = "1.0.0", optional = true }

[[example]]
name = "new_layers_demo"
path = "../examples/new_layers_demo.rs"

[[example]]
name = "sequence_models"
path = "../examples/sequence_models.rs"

[[example]]
name = "advanced_ml_demo"
path = "../examples/advanced_ml_demo.rs"

[[example]]
name = "v0_3_0_complete_demo"
path = "../examples/v0_3_0_complete_demo.rs"

[[example]]
name = "model_serving_demo"
path = "../examples/model_serving_demo.rs"

[[example]]
name = "performance_demo"
path = "../examples/performance_demo.rs"
